# NewCTScanner

./: CMakeLists.txt
src/: main.cpp
src/common/: HardwareStatus.h  ScanParameters.h  ScanProgress.h  logger.cpp  logger.h
src/core/: Frame.h  acquisitionworker.cpp  acquisitionworker.h  configmanager.cpp  configmanager.h  corefacade.cpp  corefacade.h  dataacquisitionservice.cpp  dataacquisitionservice.h  datasaver.cpp  datasaver.h  framebuffer.cpp  framebuffer.h  hardwareservice.cpp  hardwareservice.h  reconstructioncontroller.cpp  reconstructioncontroller.h  reconstructiontask.cpp  reconstructiontask.h  scancontroller.cpp  scancontroller.h  systemsafetyservice.cpp  systemsafetyservice.h
src/hal/: IDetector.h  IMotionStage.h  IXRaySource.h  dummydetector.cpp  dummydetector.h  dummymotionstage.cpp  dummymotionstage.h  dummysource.cpp  dummysource.h
src/ui/: mainwindow.cpp  mainwindow.h
